Address review comments on Accumulator
Rename accumulateAnd to accumulateAndReset, use ThreadSupport.threadId()
instead of the deprecated Thread.getId(), add @GuardedBy annotations on
the stripe-locked helpers, add @ParametersAreNonnullByDefault, and trim
the javadoc (drop the Hashtable/FlatHashtable mention, the not-yet-built
non-additive-counter escape hatch, and the C2-specific vectorization
detail; shorten the LongAdder comparison).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>